--- a/HW2/app/src/main/AndroidManifest.xml
+++ b/HW2/app/src/main/AndroidManifest.xml
@@ -8,19 +8,26 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity" />
-        <activity android:name=".TimeActivity" />
-        <activity android:name=".TipActivity" />
-        <activity android:name=".CalActivity" />
-        <activity android:name=".ChangeActivity" />
-        <activity android:name=".PasswordActivity">
+        <activity android:name=".MainActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".TimeActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".TipActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".CalActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".ChangeActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".PasswordActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".DescriptionActivity"></activity>
+        <activity android:name=".DescriptionActivity"
+            android:screenOrientation="portrait"></activity>
     </application>
 
 </manifest>
